# nemo-redux

./: .dockerignore  .env  .envrc  .gitignore  .style.yapf  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: combine_masks  detector_suite  extract_masks  extract_patches
springfield/: detector_suite.yaml  train_classifier.yaml  train_detector.yaml
src/: evaluate_detector.py  train_classifier.py  train_classifier_ignite.py  train_classifier_lightning.py  train_classifier_plain.py  train_detector--v1.py  train_detector.py  visualize_detector.py
src/nemo/: datasets.py  metrics.py  models.py  transforms.py  utils.py
src/nemo/preprocessing/: combine_masks.py  extract_patches.py
src/preprocessing/: combine_datasets.py  combine_mask_datasets.py  compute_moments.py  compute_stats.py  create_mask_images.py  extract_masks.py  extract_patches.py  partition_dataset.py  partition_mask_dataset.py
