[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "nemo-redux"
version = "0.1.0"
description = ""
authors = ["Thomas Johansen <thomasjo@gmail.com>"]

# Install current project in "editable" mode.
packages = [{ include = "nemo", from = "src" }]

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
isort = "^5.7.0"
rope = "^0.18.0"
yapf = "^0.31.0"

[tool.poetry.dependencies]
python = "^3.8"

# PyTorch is expected to be supplied by the container image.
torch = { version = "1.8.1", optional = true }
torchvision = { version = "0.9.1", optional = true }

# JupyterLab + friends are only needed for notebooks.
jupyterlab = { version = "^3.0.12", optional = true }
pandas = { version = "^1.2.3", optional = true }
seaborn = { version = "^0.11.1", optional = true }

matplotlib = "^3.3.3"
numpy = "^1.22.0"
opencv-python-headless = "^4.5.1.48"
pillow = "^8.1.0"
pycocotools = "^2.0.2"
pytorch-ignite = "^0.4.2"
pyyaml = "^5.4.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
tqdm = "^4.57.0"
wandb = "^0.10.20"

[tool.poetry.extras]
torch = ["torch", "torchvision"]
jupyter = ["jupyterlab", "pandas", "seaborn"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 999
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
